--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,13 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+@theme {
+  --font-poppins: "sans-serif";
+  --color-primary: #dd4e0a;
+  --color-alt: #0a99dd;
+  --color-alt-2: #6fdd0a;
+  --color-theme: #0866ff;
+  --color-theme-bg: #f9f6ef;
+  --color-theme-gray: #464646;
+  --color-gray: #f0f0f0;
+  --color-light: #f9fafb;
 }
